[skip netlify] PUBLISHER #776

--- a/docs/Compendium/Éden/Éden 28500.md
+++ b/docs/Compendium/Éden/Éden 28500.md
@@ -3,17 +3,17 @@ category: Compendium/Éden
 cssclasses:
   - novelist
 date: 2023-07-21
-description: Blasée, elle fait ce qu'on lui demande de faire de manière
-  efficace, bien qu'elle ne fasse pas vraiment attention aux dégâts qu'elle peut
-  causer.
+description: Blasée, elle fait ce qu'on lui demande de faire de manière efficace, bien qu'elle ne fasse pas vraiment attention aux dégâts qu'elle peut causer.
 genre: PJ
 liens:
   - "[[Éden]]"
   - "[[Vélum]]"
 share: true
 type: Fiche
-image: Éden 28500-1690740429562.png
+image: "[[../../assets/img/Éden 28500-1690740429562.png|+side]]"
 univers: Vélum
+banner_header: true
+banner: https://plus.unsplash.com/premium_photo-1671987552220-973918c6f3dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2153&q=80
 ---
 # Identité
 - **Nom** : 28500
